Add nuka-carousel dependency and implement carousel in GamePage for dynamic instruction display

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.17.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
+    "nuka-carousel": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
